pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidObjectPropertyModifier.pkl
foo {
  abstract bar = 42
}